fix: add display:flex to body, temp remove page-wrapper to test on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,8 @@ body {
 	color: var(--very-dark-grey);
 	font-size: 1rem;
 	line-height: 1.6rem;
+	display: flex;
+	flex-direction: column;
 }
 	
 
@@ -235,14 +237,14 @@ input[type="checkbox"]:focus {
 
 /*wrapper for page content and footer centered, overflow-x hidden to stop horizontal scroll on mobile*/
 /*overflow-y auto so that content scrolls below page header*/
-.main-page-wrapper {
+/* .main-page-wrapper {
 	width: 100%;
 	margin: 0 auto;
 	overflow-x: hidden;
 	overflow-y: auto;
 	display: flex;
 	flex-direction: column;
-}
+} */
 
 /*========================== hero image and landing page =================================*/
 /*parent container for hero-image so overflow hidden to stop horizontal scrolling on image*/
